# 2025-ectf-insecure-example

./: .gitignore  README.md
.github/workflows/: ci-checks.yml  discord-notification.yml  pull-request.yml  team-mentions.yml
decoder/: Dockerfile  Makefile  project.mk
decoder/inc/: simple_crypto.h  user_settings.h
decoder/scripts/: extract_keys.py
decoder/src/: decoder.c  simple_crypto.c
design/: pyproject.toml
design/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py
secrets/: secrets.json
tools/ectf25/tv/: run.py
tools/ectf25/uplink/: __main__.py
tools/ectf25/utils/: flash.py  stress_test.py  tester.py
